fix - mobile style on Android Nexus 6P slightly too wide

--- a/src/app/components/task-list/task-list.component.css
+++ b/src/app/components/task-list/task-list.component.css
@@ -1,5 +1,5 @@
 .task-list-container{
-    width: 550px;
+    width: 448px;
     margin: 0 auto;
     margin-top: 30px;
 }
@@ -14,6 +14,8 @@
 }
 
 .tiny-text{
+  text-align: center;
   font-size: 12px;
   color: #6b6b6b;
+  width: 100%;
 }
