--- a/src/app/components/task/task.component.css
+++ b/src/app/components/task/task.component.css
@@ -7,5 +7,5 @@
 }
 
 ::ng-deep .mat-checkbox-layout .mat-checkbox-label {
-  width: 400px;
+  width: 300px;
 }
